- Mejoras en formulario de creación de ítems relacionados - Mejoras en ordenamiento del listado de Sprints - Se incluye la función file_exists para twit - Validación de archivos en la administración de attachments - Corrección de error de diseño en el buscador del Product Backlog - Mejoras generales

--- a/src/BackendBundle/Resources/translations/messages.en.yml
+++ b/src/BackendBundle/Resources/translations/messages.en.yml
@@ -28,6 +28,8 @@ backend:
         unknown_error: "Unknown error, try again"
         logout: "Logout"
         save_changes: "Save Changes"
+        save_and_continue: "Save & Continue"
+        save_and_exit: "Save & Exit"
         language: "Language"
         id: "ID"
         consecutive: "Consecutive"
