Enlaces para cambiar de idioma en el Frontend

--- a/src/FrontendBundle/Resources/translations/messages.es.yml
+++ b/src/FrontendBundle/Resources/translations/messages.es.yml
@@ -1,4 +1,8 @@
 frontend:
+    lang:
+        spanish: "Español"
+        english: "Inglés"
+        
     pages:
         home: "Inicio"
         features: "Características"
