--- a/src/FrontendBundle/Resources/translations/messages.en.yml
+++ b/src/FrontendBundle/Resources/translations/messages.en.yml
@@ -1,4 +1,8 @@
 frontend:
+    lang:
+        spanish: "Spanish"
+        english: "English"
+        
     pages:
         home: "Home"
         features: "Features"
