--- a/src/BackendBundle/Resources/translations/messages.es.yml
+++ b/src/BackendBundle/Resources/translations/messages.es.yml
@@ -373,3 +373,4 @@ backend:
         time: "Tiempo"
         select_task_warning: "Por favor seleccione o describa una tarea"
         select_project_warning: "Por favor seleccione un proyecto"
+        delete_time_warning: "Estas seguro que deseas eliminar este registro?"
