--- a/src/BackendBundle/Resources/translations/messages.en.yml
+++ b/src/BackendBundle/Resources/translations/messages.en.yml
@@ -375,3 +375,4 @@ backend:
         select_task_warning: "Please select or describe a task"
         select_project_warning: "Please select a project"
         delete_time_warning: "Are you sure you want to delete this entry?"
+        start_task: "Start this Task"
