--- a/src/BackendBundle/Resources/translations/messages.es.yml
+++ b/src/BackendBundle/Resources/translations/messages.es.yml
@@ -374,3 +374,4 @@ backend:
         select_task_warning: "Por favor seleccione o describa una tarea"
         select_project_warning: "Por favor seleccione un proyecto"
         delete_time_warning: "Estas seguro que deseas eliminar este registro?"
+        start_task: "Iniciar esta Tarea"
