--- a/src/BackendBundle/Resources/translations/messages.en.yml
+++ b/src/BackendBundle/Resources/translations/messages.en.yml
@@ -43,6 +43,8 @@ backend:
         search: "Search"
         clear_search: "Clear Search"
         showing: "Showing"
+        from: "from"
+        until: "until"
         to: "to"
         of: "of"
         or: "or"
@@ -376,3 +378,4 @@ backend:
         select_project_warning: "Please select a project"
         delete_time_warning: "Are you sure you want to delete this entry?"
         start_task: "Start this Task"
+        total_time: "Total Time"
