--- a/src/BackendBundle/Resources/translations/messages.es.yml
+++ b/src/BackendBundle/Resources/translations/messages.es.yml
@@ -61,6 +61,8 @@ backend:
         project: "Proyecto"
         task: "Tarea"
         description: "Descripción"
+        today: "Hoy"
+        yesterday: "Ayer"
     
     login:
         message: "Ingrese para acceder al área administrativa"
