--- a/src/BackendBundle/Resources/translations/messages.es.yml
+++ b/src/BackendBundle/Resources/translations/messages.es.yml
@@ -67,6 +67,7 @@ backend:
         create_account: "No tienes una cuenta? Crea una"
         forgot_password: "Olvidaste tu contraseña?"
         keep_logged_in: "No cerrar sesión"
+        log_in: "Iniciar Sesión"
         
     user:
         edit_profile: "Editar Perfil"
@@ -311,6 +312,73 @@ backend:
         
     report: 
         reports: "Reportes"
+        project: "Estadísticas del Proyecto"
+        data: 
+            data1: "Datos Del Reporte"
+            abb: "Abbrv."
+            item: "Item"
+            sum: "Valor"
+            tt: "Tareas Totales"
+            tr: "Tareas Realizadas"
+            ttd: "Tiempo Total Desarrollo (Tareas, defectos, cambios, etc.)"
+            tdt: "Tiempo Empleado en Tareas" 
+            tc: "Tareas Canceladas"
+            ta: "Tareas Aplazadas"
+            de: "Defectos Encontrados"
+            dc: "Defectos Corregidos"
+            tdd: "Tiempo Empleado en Defectos"
+            sc: "Solicitudes de Cambio"
+            scd: "Solicitudes de Cambio Desarrolladas"
+            tsc: "Tiempo Empleado en Solicitudes de Cambio"
+            sp: "Sprints Planeados"
+            sf: "Sprints Finalizados"
+            pts: "Promedio Tareas por Sprint"
+            ecp: "# Errores Corregidos en Primer Ciclo"
+            ecs: "# Errores Corregidos en Segundo Ciclo"
+            ect: "# Errores Corregidos en Tercer Ciclo"
+            ecc: "# Errores Corregidos en Cuarto Ciclo"
+        metric:
+            metrics: "Métricas"
+            metric: "Métrica"
+            form: "Fórmula"
+            limit: "Límite Aceptado"
+            adv: "% Avance de Proyecto"
+            foundDefect: "% Defectos Inyectados"
+            avgHr: "Promedio: Horas Restantantes (incluye corrección de defectos existentes)"
+            cancelledItem: "% Tareas Canceladas"
+            postponedItem: "% Tareas Aplazadas"
+            avgSprint: "Promedio: Sprints Restantes"
+            estError: "Tiempo Estimado Para Correción de Defectos"
+            errorFix: "% Tiempo en Correción de Defectos"
+            changeReq: "% Solicitudes de Cambio Realizadas"
+            cicleOneFix: "% Errores Corregidos en Primer Ciclo"
+            percentageProd: "Porcentaje de Productividad"
+            deviationEst: "Desviación en Estimación de Tiempos"
+            errorDens: "Densidad de Defectos por Usuario"
+        users: "Estadísticas de Usuarios"
+        userSelect: "Seleccione un Usuario"
+        userAll: "Todos los Usuarios"
+        sprintSelect: "Seleccione un Sprint"
+        sprintAll: "Todos los Sprints"
+        empty_list: "No Hay Usuarios"
+        sprint_empty_list: "Este usuario no tiene sprints o items asignados"
+        generate: "Generar Reporte"
+        userName: "Usuario"
+        sprintName: "Sprint Seleccionado"
+        user:
+            ta: "Tareas Asignadas"
+            tr: "Tareas Realizadas"
+            tnr: "Tareas No Realizadas"
+            te: "Tiempo Estimado"
+            td: "Tiempo de Desarrollo"
+            tdd: "Tiempo Invertido en Defectos"
+            dt: "Diferencia en Tiempos"
+            dd: "Defectos Detectados"
+            ecp: "# Errores Corregidos en Primer Ciclo"
+            ecs: "# Errores Corregidos en Segundo Ciclo"
+            ect: "# Errores Corregidos en Tercer Ciclo"
+            ecc: "# Errores Corregidos en Cuarto Ciclo"
+        error: "No Existen Datos"
         
     attachment:
         attachments: "Archivos Adjuntos"
