--- a/src/BackendBundle/Resources/translations/messages.es.yml
+++ b/src/BackendBundle/Resources/translations/messages.es.yml
@@ -243,7 +243,7 @@ backend:
         status_confirmed: "Confirmado"
         status_not_a_bug: "No es un error"
         status_being_worked_on: "Trabajo iniciado"
-        status_near_completion: "Cerca de terminar"
+        status_bug_detected: "Incidencia Detectada"
         status_ready_for_testing: "Listo para pruebas"
         status_testing: "Probando"
         status_canceled: "Cancelado"
