--- a/src/BackendBundle/Resources/translations/messages.es.yml
+++ b/src/BackendBundle/Resources/translations/messages.es.yml
@@ -88,11 +88,10 @@ backend:
         cellphone: "Celular"
         message_email_exist: "Ya existe una cuenta registrada con el correo ingresado"
         message_account_created_1: "Cuenta creada exitosamente. Hemos enviado un correo electrónico a "
-        message_account_created_2: ", por favor revise su bandeja de entrada y presione clic sobre el enlace para confirmar su cuenta."
+        message_account_created_2: ", por favor revice su bandeja de entrada y presione clic sobre el enlace para confirmar su cuenta."
         confirmed_account_message: "Cuenta confirmada exitosamente"
         not_found_message: "Usuario no encontrado"
         view: "Ver Usuario"
-        email_repeated: "El correo ingresado pertenece a una cuenta existente."
         
     project:
         projects: "Proyectos"
